--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "page": "node scripts/createPage.js"
   },
   "dependencies": {
+    "@vant/weapp": "^1.5.0",
     "mobx": "^5.15.6"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.1.0",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
