--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "App": true,
     "getApp": true,
     "Page": true,
-    "Component": true
+    "Component": true,
+    "getCurrentPages": true
   }
 }
