--- a/package.json
+++ b/package.json
@@ -11,19 +11,12 @@
     "page": "node scripts/createPage.js"
   },
   "dependencies": {
-    "@vant/weapp": "^1.5.0",
+    "@vant/weapp": "^1.6.1",
     "mobx": "^5.15.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -35,9 +28,8 @@
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-watch": "^5.0.1",
     "inquirer": "^7.3.2",
-    "rimraf": "^3.0.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "rimraf": "^3.0.2"
   }
 }
